--- a/app/post/what-comes-next/page.mdx
+++ b/app/post/what-comes-next/page.mdx
@@ -1,6 +1,7 @@
 import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import IconLink from "@/components/IconLink";
+import ImageFormatter from "@/components/ImageFormatter";
 
 <IconLink href="/" text="Home" />
 
@@ -20,7 +21,7 @@ Dec 31, 2023
 
 Happy New Year!!
 
-Before talking about the future, let’s reflect on this past year.
+Before talking about the future, let's reflect on this past year.
 
 2023 was an interesting year, to say the least.
 
@@ -30,32 +31,47 @@ From these experiences, I learned that I value learning new skills, undertaking 
 
 Which leads to 2024…
 
-The year is already off to a great start. I had an amazing time with Ashley at Big Bear to end the year off. We watched a bunch of Netflix’s Singles Inferno. We had a great time relaxing and got into the New Year well-rested.
+The year is already off to a great start. I had an amazing time with Ashley at Big Bear to end the year off. We watched a bunch of Netflix's Singles Inferno. We had a great time relaxing and got into the New Year well-rested.
 
-We spent some time working on a little “Manifestation Guide” for ourselves. It’s awesome to have goals written on a cool sheet of paper. It makes it feel more concrete and lit a fire in me to strive everyday to make my dreams into reality.
+We spent some time working on a little “Manifestation Guide” for ourselves. It's awesome to have goals written on a cool sheet of paper. It makes it feel more concrete and lit a fire in me to strive everyday to make my dreams into reality.
 
 Some goals I have:
 
-Getting better at Mandarin
+- Getting better at Mandarin
 
-Running another marathon??
+- Running another marathon??
 
-Be able to do a muscle-up
+- Be able to do a muscle-up
 
-Do 40 squats carrying Ashley
+- Do 40 squats carrying Ashley
 
-Film a documentary on something I find interesting
+- Film a documentary on something I find interesting
 
-Read 15 books
+- Read 15 books
 
-Writing/blogging my thoughts
+- Writing/blogging my thoughts
 
-Work on a side project or a business
+- Work on a side project or a business
 
-I hope I’ll be able to achieve these! :)
+I hope I'll be able to achieve these! :)
 
-However, I’m most excited to experience and learn from random and spontaneous adventures. I'm excited to see how this year unfolds, and I’m ready to tackle each challenge that comes my way.
+However, I'm most excited to experience and learn from random and spontaneous adventures. I'm excited to see how this year unfolds, and I'm ready to tackle each challenge that comes my way.
 
 To start off 2024 is my biking trip!! I'm excited to be free and share all the adventures I have there with Grant.
 
 I hope everyone else has a great year ~~ manifest your future!
+
+<ImageFormatter
+  imageSources={[
+    {
+      src: "/posts/what-comes-next/big-bear.jpeg",
+      alt: "All the sons of Enokida",
+      caption: "Spending the New Year at Big Bear, CA",
+    },
+    {
+      src: "/posts/what-comes-next/new-years-resolution.jpeg",
+      alt: "New Years Resolution picture",
+      caption: "New Years Resolution picture",
+    },
+  ]}
+/>
