--- a/app/post/nick-dorian/page.mdx
+++ b/app/post/nick-dorian/page.mdx
@@ -1,6 +1,7 @@
 import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import IconLink from "@/components/IconLink";
+import ImageFormatter from "@/components/ImageFormatter";
 
 <IconLink href="/" text="Home" />
 
@@ -14,21 +15,36 @@ Dec 11, 2023
 </BlockQuote>
 
 <HeroImage
-  src="/posts/starting-a-blog/pacifica.jpeg"
-  alt="Panoramic shot of Pacifica, CA"
-  caption="Mori Point in Pacifica, CA"
+  src="/posts/nick-dorian/diego.jpeg"
+  alt="Diego the dog at Silverlake Lounge"
+  caption="Diego stealing the show"
 />
 
 Watched Nick Dorian at the Silverlake Lounge yesterday!
 
-Awesome job Nick & band!! You guys were awesome. If you have never listened to him, check Nick Dorian out on Spotify and support his band :)
+Awesome job Nick & band!! You guys were awesome. If you have never listened to him, check Nick Dorian out on [Spotify](https://open.spotify.com/artist/60tZRF2LOOUONoZXo2ATtd?si=kS89bZsJTOaE18IuJsysWw) and support his band :)
 
-To those who don’t know, Nick is Momo’s (my older sister) husband.
+To those who don't know, Nick is Momo's (my older sister) husband.
 
-First, let’s talk about the show — the gig was awesome. Seriously. So. Talented. So. Good. It’s not every day you get to see a group of talented guys play right in front of you. All the guys in the band have the skills to back up the unique artistry of their music. From the guitar solos, the vocals, and the unique drum beats, to the composition; you can tell they put so much thought into each song they sang. To bring this type of music to life takes a lot of effort, passion, and talent. Awesome to see this in person.
+First, let's talk about the show — the gig was awesome. Seriously. So. Talented. So. Good. It's not every day you get to see a group of talented guys play right in front of you. All the guys in the band have the skills to back up the unique artistry of their music. From the guitar solos, the vocals, and the unique drum beats, to the composition; you can tell they put so much thought into each song they sang. To bring this type of music to life takes a lot of effort, passion, and talent. Awesome to see this in person.
 
-Throughout the whole show, I felt like I was a lucky guy to be able to know someone like Nick, Momo, and their friends. I think there’s only a handful of people in the world that have the tenacity, vision, and talent to bring their ideas into reality; and it’s so lucky for me to know someone like this personally. If Nick Dorian or Momo is reading this… I’m not tryna boost your guy’s ego, but it’s inspiring to have a creative identity like that. To Momo, it’s great that you found a great group of friends that support each other.
+Throughout the whole show, I felt like I was a lucky guy to be able to know someone like Nick, Momo, and their friends. I think there's only a handful of people in the world that have the tenacity, vision, and talent to bring their ideas into reality; and it's so lucky for me to know someone like this personally. If Nick Dorian or Momo is reading this… I'm not tryna boost your guy's ego, but it's inspiring to have a creative identity like that. To Momo, it's great that you found a great group of friends that support each other.
 
-The “PYSYW” (People You Surround Yourself With) is super important in achieving anything great. If not for all the people in my life, I won’t be shit lol. So thanks for that guys. Let’s keep inspiring each other and other people in our lives. :)
+The “PYSYW” (People You Surround Yourself With) is super important in achieving anything great. If not for all the people in my life, I won't be shit lol. So thanks for that guys. Let's keep inspiring each other and other people in our lives. :)
 
 KEEP IT UP!
+
+<ImageFormatter
+  imageSources={[
+    {
+      src: "/posts/nick-dorian/enokida-fam.jpeg",
+      alt: "All the sons of Enokida",
+      caption: "The Enokidas",
+    },
+    {
+      src: "/posts/nick-dorian/selfie.jpeg",
+      alt: "Selfie in front of the stage",
+      caption: "Say cheeese!",
+    },
+  ]}
+/>
