Finished updating posts

--- a/app/post/cambodia/page.mdx
+++ b/app/post/cambodia/page.mdx
@@ -272,8 +272,8 @@ Anyways, we got to see some epic sights here. Angkor Wat was amazing! It was hon
     },
     {
       src: "/posts/cambodia/angkor-wat-ruins.jpeg",
-      alt: "Temples within the forest",
-      caption: "Temples within the forest is pretty surreal",
+      alt: "Temples within the jungle",
+      caption: "Temples within the jungle is pretty surreal",
     },
   ]}
 />
