Added projects page

--- a/app/projects/page.mdx
+++ b/app/projects/page.mdx
@@ -2,8 +2,46 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import IconLink from "@/components/IconLink";
 import ImageFormatter from "@/components/ImageFormatter";
+import Project from "@/components/Project";
 
 <IconLink href="/" text="Home" />
 
 # My Footprint on the Internet
 
+<BlockQuote>
+  From personal to professional projects. From large to small apps. Take a look!
+</BlockQuote>
+
+<Project
+  src="/projects/c3ai.png"
+  bgSrc="/projects/project-background-2.png"
+  alt="c3 ai"
+  projectTitle="C3.AI"
+  role="Software Engineer, UI Platform"
+  description="C3.ai provides enterprise AI software solutions for various industries."
+  technologies="React, Redux, Apache ECharts"
+  url="https://c3.ai"
+/>
+
+<Project
+  src="/projects/airswap.png"
+  bgSrc="/projects/project-background-1.png"
+  alt="Airswap"
+  projectTitle="Airswap"
+  role="Opensource Developer"
+  description="Airswap is the original trustless OTC and RFQ token trading network on the Ethereum Blockchain."
+  technologies="React, web3.js, ethers.js"
+  url="https://airswap.io"
+  githubUrl="https://github.com/airswap/airswap-web"
+/>
+
+<Project
+  src="/projects/dinobabies.png"
+  bgSrc="/projects/project-background-3.png"
+  alt="Dinobabies in Space"
+  projectTitle="Dinobabies in Space"
+  role="Frontend Engineer"
+  description="Dino Babies in Space is the first TV and Comic series built with an NFT component. Built an NFT locked website with 100+ MAU."
+  technologies="React, web3.js, ethers.js"
+  url="https://www.dinobabies.io/"
+/>
