--- a/app/projects/page.mdx
+++ b/app/projects/page.mdx
@@ -1,10 +1,7 @@
 import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
-import IconLink from "@/components/IconLink";
 import ImageFormatter from "@/components/ImageFormatter";
 import Project from "@/components/Project";
-
-<IconLink href="/" text="Home" />
 
 # My Footprint on the Internet
 
@@ -18,7 +15,7 @@ import Project from "@/components/Project";
   alt="c3 ai"
   projectTitle="C3.AI"
   role="Software Engineer, UI Platform"
-  description="C3.ai provides enterprise AI software solutions for various industries."
+  description="C3.ai provides enterprise AI software solutions for various industries. I had a chance to contribute to the Component Library and build production ready visualization tools."
   technologies="React, Redux, Apache ECharts"
   url="https://c3.ai"
 />
@@ -29,10 +26,21 @@ import Project from "@/components/Project";
   alt="Airswap"
   projectTitle="Airswap"
   role="Opensource Developer"
-  description="Airswap is the original trustless OTC and RFQ token trading network on the Ethereum Blockchain."
+  description="Airswap is the original trustless OTC and RFQ token trading network on the Ethereum Blockchain. I had the priviledge to be one of the first contributors and built reusable components on the brand new Web App."
   technologies="React, web3.js, ethers.js"
   url="https://airswap.io"
   githubUrl="https://github.com/airswap/airswap-web"
+/>
+
+<Project
+  src="/projects/ziptips.png"
+  bgSrc="/projects/project-background-4.png"
+  alt="Swifttips website"
+  projectTitle="SwiftTips"
+  role="Fullstack Engineer"
+  description="SwiftTips is a learn and earn platform for learning the Swift programming langauge. I designed and engineered the landing page. I also developed logic for the earn program for developers."
+  technologies="Figma, React, Express, MongoDB"
+  url="https://www.swifttips.co/"
 />
 
 <Project
@@ -41,7 +49,7 @@ import Project from "@/components/Project";
   alt="Dinobabies in Space"
   projectTitle="Dinobabies in Space"
   role="Frontend Engineer"
-  description="Dino Babies in Space is the first TV and Comic series built with an NFT component. Built an NFT locked website with 100+ MAU."
+  description="Dino Babies in Space is the first TV and Comic series built with an NFT-gated commuinity. I built the landing page and logic to claim rewards and interact with your character."
   technologies="React, web3.js, ethers.js"
   url="https://www.dinobabies.io/"
 />
