Added start of comments section

--- a/app/projects/page.mdx
+++ b/app/projects/page.mdx
@@ -49,7 +49,7 @@ import Project from "@/components/Project";
   alt="Dinobabies in Space"
   projectTitle="Dinobabies in Space"
   role="Frontend Engineer"
-  description="Dino Babies in Space is the first TV and Comic series built with an NFT-gated commuinity. I built the landing page and logic to claim rewards and interact with your character."
+  description="Dino Babies in Space is the first TV and Comic series built with an NFT-gated community. I built the landing page and logic to claim rewards and interact with your character."
   technologies="React, web3.js, ethers.js"
   url="https://www.dinobabies.io/"
 />
