--- a/app/now/page.mdx
+++ b/app/now/page.mdx
@@ -6,7 +6,7 @@ import { currentLocation } from "@/utils/const";
 # Now
 
 <BlockQuote>
-  This is like an [About](/about) page, but just what's on goin' on right now.
+  This is like an [About](/about) page, but just what's goin' on right now.
 </BlockQuote>
 
 **Currently:** Studying for some interviews. Writing content for this blog. Worked on a [hackathon](https://devpost.com/software/politicool) recently! Going to Taiwan and Japan next month so stoked and working on building out projects before then!
