Added metadata to post

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -2,7 +2,12 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
-# About
+export const metadata = {
+  title: "who am i?",
+  author: "Kota Cody Enokida",
+};
+
+# Who am I?
 
 _Kota Cody Enokida_
 
