--- a/app/now/page.mdx
+++ b/app/now/page.mdx
@@ -3,6 +3,11 @@ import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 import { currentLocation } from "@/utils/const";
 
+export const metadata = {
+  title: "what i'm doing now",
+  author: "Kota Cody Enokida",
+};
+
 # Now
 
 <BlockQuote>
@@ -19,6 +24,6 @@ import { currentLocation } from "@/utils/const";
 
 **Last updated:** 6/20/2024
 
-----
+---
 
 Inspiration from [Derek Sivers](https://sive.rs/)'s [www.nownownow.com](https://www.nownownow.com)
