--- a/app/post/nick-dorian/page.mdx
+++ b/app/post/nick-dorian/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Nick Dorian and People You Surround Yourself With",
+  author: "Kota Cody Enokida",
+};
+
 Dec 11, 2023
 
 # Nick Dorian and People You Surround Yourself With
