--- a/app/post/starting-a-blog/page.mdx
+++ b/app/post/starting-a-blog/page.mdx
@@ -1,6 +1,11 @@
 import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 
+export const metadata = {
+  title: "Starting a Blog",
+  author: "Kota Cody Enokida",
+};
+
 Dec 07, 2023
 
 # Starting a Blog
