--- a/app/post/vietnam-three/page.mdx
+++ b/app/post/vietnam-three/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Vietnam (Part 3)",
+  author: "Kota Cody Enokida",
+};
+
 Mar 02, 2024
 
 # Vietnam (Part 3)
