--- a/app/post/cambodia/page.mdx
+++ b/app/post/cambodia/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Cambodia",
+  author: "Kota Cody Enokida",
+};
+
 Mar 10, 2024
 
 # Cambodia
