--- a/app/post/fam-takes-seattle/page.mdx
+++ b/app/post/fam-takes-seattle/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Fam Take Seattle",
+  author: "Kota Cody Enokida",
+};
+
 Dec 09, 2023
 
 # Fam Take Seattle
