--- a/app/post/jacuzzi-encounters/page.mdx
+++ b/app/post/jacuzzi-encounters/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Important Jacuzzi Encounters",
+  author: "Kota Cody Enokida",
+};
+
 Jan 29, 2024
 
 # Important Jacuzzi Encounters
