--- a/app/post/pacific-northwest/page.mdx
+++ b/app/post/pacific-northwest/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "The Great Pacific Northwest",
+  author: "Kota Cody Enokida",
+};
+
 Jun 09, 2024
 
 # The Great Pacific Northwest
