--- a/app/post/reflection-of-bay-area/page.mdx
+++ b/app/post/reflection-of-bay-area/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "A Reflection of the Bay Area",
+  author: "Kota Cody Enokida",
+};
+
 Jan 16, 2024
 
 # A Reflection of the Bay Area
