--- a/app/post/surfing-the-internet/page.mdx
+++ b/app/post/surfing-the-internet/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Surfing the Internet",
+  author: "Kota Cody Enokida",
+};
+
 May 06, 2024
 
 # Surfing the Internet
