--- a/app/post/thailand-finale/page.mdx
+++ b/app/post/thailand-finale/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Thailand (Finale)",
+  author: "Kota Cody Enokida",
+};
+
 Apr 06, 2024
 
 # Thailand (Finale)
