--- a/app/post/thailand/page.mdx
+++ b/app/post/thailand/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Thailand",
+  author: "Kota Cody Enokida",
+};
+
 Mar 20, 2024
 
 # Thailand + 💭
