--- a/app/post/vietnam-two/page.mdx
+++ b/app/post/vietnam-two/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "Vietnam (Part 2)",
+  author: "Kota Cody Enokida",
+};
+
 Feb 26, 2024
 
 # Vietnam (Part 2)
