--- a/app/post/walk-around-the-block/page.mdx
+++ b/app/post/walk-around-the-block/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "A Walk Around the Block",
+  author: "Kota Cody Enokida",
+};
+
 Dec 18, 2023
 
 # A Walk Around the Block
