--- a/app/post/what-comes-next-2024/page.mdx
+++ b/app/post/what-comes-next-2024/page.mdx
@@ -2,6 +2,11 @@ import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 
+export const metadata = {
+  title: "What Comes Next (2024)",
+  author: "Kota Cody Enokida",
+};
+
 Dec 31, 2023
 
 # What Comes Next?
