--- a/app/projects/page.mdx
+++ b/app/projects/page.mdx
@@ -3,6 +3,11 @@ import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
 import Project from "@/components/Project";
 
+export const metadata = {
+  title: "my footprint on the internet",
+  author: "Kota Cody Enokida",
+};
+
 # My Footprint on the Internet
 
 <BlockQuote>
