added new page and also grammar fix

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -11,11 +11,13 @@ export const metadata = {
 
 _Kota Cody Enokida_
 
-I'm 24 years old. A Software Developer. I work mostly on the web. I like trying new things and making new memories!
+I'm 24 years old. I like trying new things and making new memories!
+
+I'm an avid enjoyer of watching and being a part of technological innovation but my interests mostly lie in simply _making things_. I find it super fun and rewarding to make things that I think are cool and others think are cool too. Right now, what I make happens to be software.
+
+I'm most known by my friends for [biking in random places](/post/vietnam-one), being unable to handle spicy food, loving [One Piece](https://www.crunchyroll.com/series/GRMG8ZQZR/one-piece), and writing this blog.
 
 I graduated from the **University of California, Irvine** with bachelor's degree in Computer Science. I previously worked at [C3 AI](https://c3.ai), [Beyond Limits AI](https://www.beyond.ai/), and was a contributor at [AirSwap](https://airswap.io).
-
-I'm most known by my friends for [biking in random places](/post/vietnam-one), being unable to handle spicy food, loving [One Piece](https://www.crunchyroll.com/series/GRMG8ZQZR/one-piece), and writing this blog!
 
 I often take care of my girlfriend's bunny, **Filby** - short for _Filbert_!
 
