--- a/app/post/pacific-northwest/page.mdx
+++ b/app/post/pacific-northwest/page.mdx
@@ -105,7 +105,7 @@ After saying our goodbyes, Ashley and I packed our bags and continued to our nex
 
 Our next stop was Portland, OR. Oooooh man, Portland - probably one of, if not my favorite city in the United States now - although I have to say my previous love for Oregon and being with great company probably puts a heavy bias on my experience there.
 
-The layout of Portland as a city is fascinating to me. There is a downtown section in the center of Portland, although I can't speak much about it since we didn't visit too much of it. Very walkable though and felt safer than San Fransisco. Outside the downtown portion, lies the suburbs - but it's not quite the suburbs. This area is the main highlight. There are nice single-family homes, but mixed in with it are streets of locally owned restaurants, food pods, and craft stores. This portion of the city is easily drivable, very bike-able, and somewhat walkable.
+The layout of Portland as a city is fascinating to me. There is a downtown section in the center of Portland, although I can't speak much about it since we didn't visit too much of it. Very walkable though and felt safer than San Francisco. Outside the downtown portion, lies the suburbs - but it's not quite the suburbs. This area is the main highlight. There are nice single-family homes, but mixed in with it are streets of locally owned restaurants, food pods, and craft stores. This portion of the city is easily drivable, very bike-able, and somewhat walkable.
 
 Most stores in Portland are local small businesses. By simply stepping foot into these stores, you could experience firsthand the native community that thrives there. The people working were also extremely kind and hospitable - something we rarely find in California. Even on a Tuesday morning, the cafes were filled with people of all demographics.
 
