--- a/app/post/what-comes-next-2024/page.mdx
+++ b/app/post/what-comes-next-2024/page.mdx
@@ -27,7 +27,7 @@ Before talking about the future, let's reflect on this past year.
 
 2023 was an interesting year, to say the least.
 
-It was my first full year of working as a software engineer. It was also my first time getting laid off as a software engineer. I moved to San Fransisco and experienced what city life was like. I went to my first wedding. I ran my first half marathon and full marathon. I tried pottery for the first time. I rock-climbed outdoors for the first time. I went mountain biking for the first time. I climbed Mt. Fuji. I rode a motorcycle for the first time. I got my scuba-diving license. I volunteered at a marine science institute. I played in a city soccer league for the first time. I experienced lots of highs and lows. I cried some but laughed a lot more. I thought frequently about who I was and how I wanted to live.
+It was my first full year of working as a software engineer. It was also my first time getting laid off as a software engineer. I moved to San Francisco and experienced what city life was like. I went to my first wedding. I ran my first half marathon and full marathon. I tried pottery for the first time. I rock-climbed outdoors for the first time. I went mountain biking for the first time. I climbed Mt. Fuji. I rode a motorcycle for the first time. I got my scuba-diving license. I volunteered at a marine science institute. I played in a city soccer league for the first time. I experienced lots of highs and lows. I cried some but laughed a lot more. I thought frequently about who I was and how I wanted to live.
 
 From these experiences, I learned that I value learning new skills, undertaking new ventures, and becoming knowledgeable in the things that interest me. I hope to find a job where I don't feel stagnant.
 
