--- a/app/post/reflection-of-bay-area/page.mdx
+++ b/app/post/reflection-of-bay-area/page.mdx
@@ -12,17 +12,17 @@ Jan 16, 2024
 # A Reflection of the Bay Area
 
 <BlockQuote>
-  A farewell message to Mountain View and San Fransisco which was my home for
+  A farewell message to Mountain View and San Francisco which was my home for
   the past 2 years.
 </BlockQuote>
 
 <HeroImage
-  src="/posts/reflection-of-bay-area/san-fransisco.jpeg"
-  alt="San Fransisco View"
-  caption="Marin Headlands, north of San Fransisco"
+  src="/posts/reflection-of-bay-area/san-francisco.jpeg"
+  alt="San Francisco View"
+  caption="Marin Headlands, north of San Francisco"
 />
 
-Today, as I walked through the rugged streets of the Mission District for the last time as a resident, a flurry of thoughts and observations flooded my mind. It is really my final day. I spent 1 year in Mountain View and 5 months in San Fransisco. I experienced countless new friendships, viewpoints, hardships, and memories during my time here. I felt first-hand what it is like to live in Silicon Valley, where I encountered arguably the smartest, brightest, and most interesting peoples in the entire world. To constantly have those people around humbled me and challenged the way I viewed the world and broadened my perspective.
+Today, as I walked through the rugged streets of the Mission District for the last time as a resident, a flurry of thoughts and observations flooded my mind. It is really my final day. I spent 1 year in Mountain View and 5 months in San Francisco. I experienced countless new friendships, viewpoints, hardships, and memories during my time here. I felt first-hand what it is like to live in Silicon Valley, where I encountered arguably the smartest, brightest, and most interesting peoples in the entire world. To constantly have those people around humbled me and challenged the way I viewed the world and broadened my perspective.
 
 Sitting at the top of Mission Dolores Park, looking at the city horizon, I tried envisioning my future here and in other places.
 
@@ -36,7 +36,7 @@ Sitting at the top of Mission Dolores Park, looking at the city horizon, I tried
   ]}
 />
 
-San Fransisco is a beautiful city — but you can't ignore the heap of problems that also lie within it. From the homeless crisis and drug abuse on the streets to the opposite spectrum of out-of-touch and stuck-up individuals who emphasize money too much. Would I come live here again..? Maybe, maybe not, but it will be a place I will never forget.
+San Francisco is a beautiful city — but you can't ignore the heap of problems that also lie within it. From the homeless crisis and drug abuse on the streets to the opposite spectrum of out-of-touch and stuck-up individuals who emphasize money too much. Would I come live here again..? Maybe, maybe not, but it will be a place I will never forget.
 
 What about a bigger city like NYC or Tokyo? The Suburbs? A more rural area?
 
@@ -102,7 +102,7 @@ Adios amigos ~~ to the next one!!
     },
     {
       type: "landscape",
-      src: "/posts/reflection-of-bay-area/san-fransisco-home-selfie.jpeg",
+      src: "/posts/reflection-of-bay-area/san-francisco-home-selfie.jpeg",
       alt: "Selfie with the housemates and friends",
       caption: "The best mates, I'll miss living here!",
     },
