added svg icons and updated post

--- a/app/post/living-close-to-friends/page.mdx
+++ b/app/post/living-close-to-friends/page.mdx
@@ -31,7 +31,9 @@ A large subset of my friends is moving to Los Angeles together shortly. It's a m
 
 Regardless, I think it's extremely important to live close to those who you enjoy being with. In an ideal world, I'd construct my own little neighborhood, with all my friends owning homes 5 minutes walking distance from each other, a community garden we all tend, and letting our kids play with one another. In any case, I'm making it a top priority to manifest that dream world once the dust settles. It's a monumental task to organize all my friends, but I can say with 99.99% certainty that it'll probably be worth the effort.
 
-I've written about a dozen random posts in the past couple of weeks that I didn't want to share, but I'm glad to be writing publicly again. I'm off to Taiwan and Japan next month! Hopefully, by the end of it, I'll be fluent in Mandarin and also have a job! (XD) I'll keep you all updated.
+This post is a simple plead to convince your friends to live closer to you a bit higher on your list when you think of settling down (wink wink).
+
+I've written about a dozen random posts in the past couple of weeks that I didn't want to share (due to quality or subject), but I'm glad to be writing publicly again. I'm off to Taiwan and Japan next month! Hopefully, by the end of it, I'll be fluent in Mandarin and also have a job! (XD) I'll keep you all updated.
 
 Thanks for reading!
 
