--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 _Kota Cody Enokida_
 
-I'm 24 years old. I like trying new things and making new memories!
+I'm 24 years old. Japanese-American. I like trying new things and making new memories!
 
 I'm an avid enjoyer of watching and being a part of technological innovation but my interests mostly lie in simply _making things_. I find it super fun and rewarding to make things that I think are cool and others think are cool too. Right now, what I make happens to be software.
 
