Complete refactor on code

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -13,6 +13,8 @@ _Kota Cody Enokida_
 
 I'm 24 years old. Japanese-American. I like trying new things and making new memories!
 
+It's hard to describe who I am in just a few sentences. I'll try my best!
+
 I'm an avid enjoyer of watching and being a part of technological innovation but my interests mostly lie in simply _making things_. I find it super fun and rewarding to make things that I think are cool and others think are cool too. Right now, what I make happens to be software.
 
 I'm most known by my friends for [biking in random places](/post/vietnam-one), being unable to handle spicy food, loving [One Piece](https://www.crunchyroll.com/series/GRMG8ZQZR/one-piece), and writing this blog.
