update now page

--- a/app/now/page.mdx
+++ b/app/now/page.mdx
@@ -14,9 +14,27 @@ export const metadata = {
   This is like an [About](/about) page, but just what's goin' on right now.
 </BlockQuote>
 
-**Currently:** Studying for some interviews. Writing content for this blog. Worked on a [hackathon](https://devpost.com/software/politicool) recently! Going to Taiwan and Japan next month so stoked and working on building out projects before then!
+## July 2024
 
 **Location:** {currentLocation}
+
+**Currently:** I'm in Taiwan!!! I'm so excited to be here and see what this place has to offer. I've spent the past two weeks with Ashley and her relatives. We spent the first half with her father's family in Songshan District. We spent the following week going on a 12 person roadtrip (cousins, aunts, uncles included) down to Kenting National Park. Fun family time and was a fun time to meet all the folks. Taiwan is hot and humid, but has some amazing food and great culture. Career wise, I've been interviewing. I made it pretty far into interviews at one place but rejected for not having the right amount of experience. Tough luck, but I'm confident in my skills so I'll keep on grinding! 2 more weeks in Taiwan and then I'm off to Japan!
+
+**Day Job:** Not Applicable
+
+**Interests:** Reading Twitter, Cryptocurrencies, Coding, Indie Internet Content
+
+**Last updated:** 7/30/2024
+
+---
+
+# Archive
+
+## June 2024
+
+**Location:** Irvine, CA 🇺🇸
+
+**Currently:** Studying for some interviews. Writing content for this blog. Worked on a [hackathon](https://devpost.com/software/politicool) recently! Going to Taiwan and Japan next month so stoked and working on building out projects before then!
 
 **Day Job:** Not Applicable
 
