Some house keeping, updated projects page, button styling, added map to now page

--- a/app/now/page.mdx
+++ b/app/now/page.mdx
@@ -1,6 +1,8 @@
 import BlockQuote from "@/components/BlockQuote";
 import HeroImage from "@/components/HeroImage";
 import ImageFormatter from "@/components/ImageFormatter";
+import NowMap from "@/components/NowMap";
+import { Suspense } from "react";
 import { currentLocation } from "@/utils/const";
 
 export const metadata = {
@@ -14,11 +16,13 @@ export const metadata = {
   This is like an [About](/about) page, but just what's goin' on right now.
 </BlockQuote>
 
+<NowMap lat={25.1152} lon={121.5150} />
+
 ## July 2024
 
 **Location:** {currentLocation}
 
-**Currently:** I'm in Taiwan!!! I'm so excited to be here and see what this place has to offer. I've spent the past two weeks with Ashley and her relatives. We spent the first half with her father's family in Songshan District. We spent the following week going on a 12 person roadtrip (cousins, aunts, uncles included) down to Kenting National Park. Fun family time and was a fun time to meet all the folks. Taiwan is hot and humid, but has some amazing food and great culture. Career wise, I've been interviewing. I made it pretty far into interviews at one place but rejected for not having the right amount of experience. Tough luck, but I'm confident in my skills so I'll keep on grinding! 2 more weeks in Taiwan and then I'm off to Japan!
+**Currently:** I'm in Taiwan!!! I'm so excited to be here and see what this place has to offer. I've spent the past two weeks with Ashley and her relatives. We spent the first half with her father's family in Songshan District. We spent the following week going on a 12 person roadtrip (cousins, aunts, uncles included) down to Kenting National Park. Fun family time and was a fun time to meet all the folks. Taiwan is hot and humid, but has some amazing food and great culture. Career wise, I've been interviewing. I made it pretty far into interviews at one place but rejected for not having the right amount of experience. It's tough to be a junior in this market. Tough luck, but I'm confident in my skills so I'll keep on grinding! 2 more weeks in Taiwan and then I'm off to Japan!
 
 **Day Job:** Not Applicable
 
