--- a/app/projects/page.mdx
+++ b/app/projects/page.mdx
@@ -17,7 +17,7 @@ export const metadata = {
 
 <Project
   src="/projects/c3ai.png"
-  bgSrc="/projects/project-background-2.png"
+  bgSrc="/projects/project-background-1.jpg"
   alt="c3 ai"
   projectTitle="C3.AI"
   role="Software Engineer, UI Platform"
@@ -28,7 +28,7 @@ export const metadata = {
 
 <Project
   src="/projects/airswap.png"
-  bgSrc="/projects/project-background-1.png"
+  bgSrc="/projects/project-background-2.jpg"
   alt="Airswap"
   projectTitle="Airswap"
   role="Opensource Developer"
@@ -40,7 +40,7 @@ export const metadata = {
 
 <Project
   src="/projects/ziptips.png"
-  bgSrc="/projects/project-background-4.png"
+  bgSrc="/projects/project-background-3.jpg"
   alt="Swifttips website"
   projectTitle="SwiftTips"
   role="Fullstack Engineer"
@@ -51,7 +51,7 @@ export const metadata = {
 
 <Project
   src="/projects/dinobabies.png"
-  bgSrc="/projects/project-background-3.png"
+  bgSrc="/projects/project-background-4.jpg"
   alt="Dinobabies in Space"
   projectTitle="Dinobabies in Space"
   role="Frontend Engineer"
@@ -69,7 +69,7 @@ export const metadata = {
 
 <Project
   src="/projects/playground.png"
-  bgSrc="/projects/project-background-2.png"
+  bgSrc="/projects/project-background-1.jpg"
   alt="kotakun's digital playground"
   projectTitle="Playground"
   role="Design Engineer"
