--- a/app/now/page.mdx
+++ b/app/now/page.mdx
@@ -10,13 +10,13 @@ export const metadata = {
   author: "Kota Cody Enokida",
 };
 
-# Now
+# What I'm Doing Now
 
 <BlockQuote>
-  This is like an [About](/about) page, but just what's goin' on right now.
+  This is like an [about](/about) page, but just what's goin' on right now.
 </BlockQuote>
 
-<NowMap lat={25.1152} lon={121.5150} />
+<NowMap lat={25.1152} lon={121.515} />
 
 ## July 2024
 
